--- a/index.html
+++ b/index.html
@@ -2,27 +2,46 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>SEASOUL Chatbot</title>
-    <meta charset="UTF-8" />
-    <style>
-        body { font-family: sans-serif; background: #f2f8f9; padding: 40px; }
-        h1 { color: #2e4053; }
-        #chatbox { width: 100%; max-width: 600px; margin: 0 auto; padding: 20px; background: white; border-radius: 8px; }
-        .message { margin-bottom: 10px; }
-        .user { color: #1f618d; font-weight: bold; }
-        .bot { color: #117864; font-style: italic; }
-        input[type="text"] { width: 80%; padding: 10px; }
-        button { padding: 10px 20px; }
-    </style>
+  <meta charset="UTF-8" />
+  <title>SEASOUL Chatbot</title>
+  <style>
+    body { font-family: Arial; background-color: #f3f9f9; padding: 40px; }
+    #chatbox { width: 100%; max-width: 600px; margin: auto; padding: 20px; background: white; border-radius: 8px; box-shadow: 0 0 8px #ccc; }
+    .message { margin-bottom: 10px; }
+    .user { color: #005b96; font-weight: bold; }
+    .bot { color: #00897b; font-style: italic; }
+    input[type="text"] { width: 70%; padding: 10px; margin-right: 10px; }
+    button { padding: 10px 20px; }
+  </style>
 </head>
 <body>
-    <div id="chatbox">
-        <h1>SEASOUL Chatbot</h1>
-        <div id="messages"></div>
-        <input type="text" id="input" placeholder="輸入你的心聲..." />
-        <button onclick="sendMessage()">送出</button>
-    </div>
+  <div id="chatbox">
+    <h2>SEASOUL Chatbot</h2>
+    <div id="messages"></div>
+    <input type="text" id="input" placeholder="輸入你的心聲..." />
+    <button onclick="sendMessage()">送出</button>
+  </div>
+  <script>
+    async function sendMessage() {
+      const input = document.getElementById('input');
+      const text = input.value.trim();
+      if (!text) return;
 
-    <script src="script.js"></script>
+      const messages = document.getElementById('messages');
+      messages.innerHTML += '<div class="message user">你：' + text + '</div>';
+      messages.innerHTML += '<div class="message bot" id="loading">SEASOUL 正在聆聽你…</div>';
+      input.value = '';
+
+      const res = await fetch('/api/chat', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ message: text })
+      });
+
+      const data = await res.json();
+      document.getElementById('loading').remove();
+      messages.innerHTML += '<div class="message bot">SEASOUL：' + data.reply + '</div>';
+    }
+  </script>
 </body>
 </html>
