--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 <head>
   <meta charset="UTF-8" />
-  <title>SEASOUL Chatbot</title>
+  <title>靜映 Still Reflection</title>
   <style>
     body { font-family: Arial; background-color: #f3f9f9; padding: 40px; }
     #chatbox { width: 100%; max-width: 600px; margin: auto; padding: 20px; background: white; border-radius: 8px; box-shadow: 0 0 8px #ccc; }
