--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
       const data = await res.json();
       document.getElementById('loading').remove();
-      messages.innerHTML += '<div class="message bot">SEASOUL：' + data.reply + '</div>';
+      messages.innerHTML += '<div class="message bot">靜映：' + data.reply + '</div>';
     }
   </script>
 </body>
