--- a/index.html
+++ b/index.html
@@ -1,26 +1,89 @@
-
 <!DOCTYPE html>
 <html>
 <head>
   <meta charset="UTF-8" />
   <title>靜映 Still Reflection</title>
+
+  <!-- 靈性中文 + 英文字型 -->
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC&display=swap" rel="stylesheet">
+
   <style>
-    body { font-family: Arial; background-color: #f3f9f9; padding: 40px; }
-    #chatbox { width: 100%; max-width: 600px; margin: auto; padding: 20px; background: white; border-radius: 8px; box-shadow: 0 0 8px #ccc; }
-    .message { margin-bottom: 10px; }
+    body {
+      font-family: 'Noto Serif TC', serif;
+      background-color: #f9fbfc;
+      padding: 40px;
+      color: #045c4d;
+      line-height: 1.8;
+    }
+
+    #chatbox {
+      width: 100%;
+      max-width: 600px;
+      margin: auto;
+      padding: 30px 20px;
+      background: white;
+      border-radius: 12px;
+      box-shadow: 0 0 15px rgba(0,0,0,0.08);
+    }
+
+    h2 {
+      text-align: center;
+      font-size: 1.8em;
+      margin-bottom: 10px;
+    }
+
+    .intro {
+      text-align: center;
+      margin-bottom: 25px;
+      font-size: 1.1em;
+      color: #045c4d;
+      animation: fadeIn 2s ease-in-out;
+    }
+
+    @keyframes fadeIn {
+      from { opacity: 0; transform: translateY(10px); }
+      to   { opacity: 1; transform: translateY(0); }
+    }
+
+    .message { margin-bottom: 12px; }
     .user { color: #005b96; font-weight: bold; }
     .bot { color: #00897b; font-style: italic; }
-    input[type="text"] { width: 70%; padding: 10px; margin-right: 10px; }
-    button { padding: 10px 20px; }
+
+    input[type="text"] {
+      width: 70%;
+      padding: 10px;
+      margin-right: 10px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+    }
+
+    button {
+      padding: 10px 20px;
+      border: none;
+      background-color: #005b96;
+      color: white;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #003f6f;
+    }
   </style>
 </head>
 <body>
   <div id="chatbox">
-    <h2>SEASOUL Chatbot</h2>
+    <div class="intro">
+      <p>這是一場與自己的對話。</p>
+      <p>如海般靜映，讓你照見內在深處的聲音與智慧。</p>
+    </div>
+
+    <h2>靜映 Still Reflection</h2>
     <div id="messages"></div>
     <input type="text" id="input" placeholder="輸入你的心聲..." />
     <button onclick="sendMessage()">送出</button>
   </div>
+
   <script>
     async function sendMessage() {
       const input = document.getElementById('input');
@@ -29,7 +92,7 @@
 
       const messages = document.getElementById('messages');
       messages.innerHTML += '<div class="message user">你：' + text + '</div>';
-      messages.innerHTML += '<div class="message bot" id="loading">SEASOUL 正在聆聽你…</div>';
+      messages.innerHTML += '<div class="message bot" id="loading">靜映 正在聆聽你…</div>';
       input.value = '';
 
       const res = await fetch('/api/chat', {
@@ -45,3 +108,4 @@
   </script>
 </body>
 </html>
+
