--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>靜映 Still Reflection</title>
 
-  <!-- 靈性中文 + 英文字型 -->
+  <!-- 字型 -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC&display=swap" rel="stylesheet">
 
   <style>
@@ -12,7 +12,7 @@
       font-family: 'Noto Serif TC', serif;
       background-color: #f9fbfc;
       padding: 40px;
-      color: #045c4d;
+      color: #445c5a;
       line-height: 1.8;
     }
 
@@ -26,17 +26,18 @@
       box-shadow: 0 0 15px rgba(0,0,0,0.08);
     }
 
-    h2 {
+    h1 {
       text-align: center;
-      font-size: 1.8em;
+      font-size: 2em;
       margin-bottom: 10px;
+      color: #2b3b40;
     }
 
     .intro {
       text-align: center;
       margin-bottom: 25px;
       font-size: 1.1em;
-      color: #045c4d;
+      color: #445c5a;
       animation: fadeIn 2s ease-in-out;
     }
 
@@ -47,7 +48,7 @@
 
     .message { margin-bottom: 12px; }
     .user { color: #005b96; font-weight: bold; }
-    .bot { color: #00897b; font-style: italic; }
+    .bot { color: #007e73; font-style: italic; }
 
     input[type="text"] {
       width: 70%;
@@ -73,14 +74,15 @@
 </head>
 <body>
   <div id="chatbox">
+    <h1>靜映 Still Reflection</h1>
+
     <div class="intro">
       <p>這是一場與自己的對話。</p>
-      <p>如海般靜映，讓你照見內在深處的聲音與智慧。</p>
+      <p>海般靜映，讓你照見內在深處的聲音與智慧。</p>
     </div>
 
-    <h2>靜映 Still Reflection</h2>
     <div id="messages"></div>
-    <input type="text" id="input" placeholder="輸入你的心聲..." />
+    <input type="text" id="input" placeholder="寫下此刻的感受…" />
     <button onclick="sendMessage()">送出</button>
   </div>
 
@@ -92,7 +94,7 @@
 
       const messages = document.getElementById('messages');
       messages.innerHTML += '<div class="message user">你：' + text + '</div>';
-      messages.innerHTML += '<div class="message bot" id="loading">靜映 正在聆聽你…</div>';
+      messages.innerHTML += '<div class="message bot" id="loading">SEASOUL 正在感受你的話語…</div>';
       input.value = '';
 
       const res = await fetch('/api/chat', {
@@ -103,7 +105,7 @@
 
       const data = await res.json();
       document.getElementById('loading').remove();
-      messages.innerHTML += '<div class="message bot">靜映：' + data.reply + '</div>';
+      messages.innerHTML += '<div class="message bot">SEASOUL：' + data.reply + '</div>';
     }
   </script>
 </body>
