--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 
     <div class="intro">
       <p>「這是一場與自己的對話」</p>
-      <p>」海般靜映，讓你照見內在深處的聲音與智慧」</p>
+      <p>「海般靜映，讓你照見內在深處的聲音與智慧」</p>
     </div>
 
     <div id="messages"></div>
