--- a/index.html
+++ b/index.html
@@ -1,102 +1,123 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>靜映 Still Reflection</title>
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+TC&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Noto Serif TC', serif;
-      background-color: #f4f8f6;
-      padding: 40px;
-      color: #3c3c3c;
+      font-family: "Noto Serif TC", "仿宋體", serif;
+      background-color: #f5f7f4;
+      padding: 40px 20px;
+      margin: 0;
     }
+
     #chatbox {
-      width: 100%;
-      max-width: 600px;
-      margin: auto;
+      max-width: 700px;
+      margin: 80px auto 50px auto;
       padding: 30px;
-      background: white;
+      background: #ffffff;
       border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0, 0, 0, 0.08);
+      box-shadow: 0 0 16px rgba(0, 0, 0, 0.1);
     }
+
     .message {
-      margin-bottom: 16px;
-      line-height: 1.8;
+      margin-bottom: 12px;
+      line-height: 1.6;
     }
+
     .user {
-      color: #395B64;
+      color: #5e7094;
       font-weight: bold;
     }
+
     .bot {
-      color: #4a6d64;
+      color: #4f6d5d;
       font-style: italic;
     }
+
     input[type="text"] {
       width: 70%;
-      padding: 12px;
+      padding: 10px;
+      margin-top: 10px;
+      border-radius: 4px;
       border: 1px solid #ccc;
-      border-radius: 4px;
-    }
-    button {
-      padding: 12px 20px;
-      background-color: #a0cfc0;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    button:hover {
-      background-color: #8bbbab;
-    }
-    h1 {
-      text-align: center;
-      margin-bottom: 5px;
-    }
-    h2 {
-      text-align: center;
-      margin-top: 0;
-      font-weight: normal;
-      color: #5a5a5a;
     }
 
-    /* 音樂控制樣式 */
-    .music-controls {
-      position: fixed;
-      bottom: 20px;
-      right: 20px;
+    button {
+      padding: 10px 16px;
+      margin-top: 10px;
+      border: none;
+      border-radius: 4px;
+      background-color: #4f6d5d;
+      color: white;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background-color: #3f5f4c;
+    }
+
+    header {
       display: flex;
       align-items: center;
-      gap: 10px;
-      background: #fff;
-      padding: 10px 14px;
-      border-radius: 30px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      justify-content: space-between;
+      max-width: 700px;
+      margin: 0 auto;
     }
 
-    .music-btn {
-      border: none;
-      background: none;
-      font-size: 20px;
-      cursor: pointer;
+    #logo {
+      height: 60px;
+      width: auto;
+      max-width: 300px;
     }
 
-    .volume-slider {
-      width: 100px;
+    .subtitle {
+      text-align: center;
+      font-size: 1.1rem;
+      margin-top: 10px;
+      color: #666;
+      line-height: 1.5;
+    }
+
+    @media (max-width: 600px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+      #logo {
+        height: 50px;
+      }
+    }
+
+    #audio-controls {
+      text-align: right;
+      max-width: 700px;
+      margin: 10px auto 0;
+    }
+
+    #audio-controls input[type=range] {
+      vertical-align: middle;
     }
   </style>
 </head>
 <body>
 
-  <h1>靜映 Still Reflection</h1>
-  <h2>這是一場與自己的對話</h2>
-  <p style="text-align:center; color:#666; margin-bottom: 40px;">
-    海般靜映，讓你照見內在深處的聲音與智慧。
-  </p>
+  <header>
+    <img id="logo" src="still_reflection_logo.png" alt="靜映 Still Reflection Logo">
+  </header>
+
+  <div class="subtitle">這是一場與自己的對話。<br>海般靜映，讓你照見內在深處的聲音與智慧。</div>
 
   <div id="chatbox">
     <div id="messages"></div>
-    <input type="text" id="input" placeholder="你此刻的心聲是..." />
+    <input type="text" id="input" placeholder="請寫下此刻你想說的話…" />
     <button onclick="sendMessage()">送出</button>
+  </div>
+
+  <div id="audio-controls">
+    🔊 <button onclick="toggleMusic()">暫停/播放</button>
+    音量：<input type="range" id="volume" min="0" max="1" step="0.01" value="0.5" onchange="setVolume(this.value)">
   </div>
 
   <!-- 背景音樂播放器 -->
@@ -105,44 +126,19 @@
     Your browser does not support the audio element.
   </audio>
 
-  <!-- 音樂控制 -->
-  <div class="music-controls">
-    <button id="music-toggle" onclick="toggleMusic()" class="music-btn">🔊</button>
-    <input type="range" id="volume-control" class="volume-slider" min="0" max="1" step="0.01" value="0.7" />
-  </div>
-
   <script>
     const audio = document.getElementById("bgm");
-    const toggleBtn = document.getElementById("music-toggle");
-    const volumeSlider = document.getElementById("volume-control");
-
-    // 初始化音量
-    audio.volume = 0.7;
-
-    // 播放或暫停
     function toggleMusic() {
       if (audio.paused) {
         audio.play();
-        toggleBtn.innerText = "🔊";
       } else {
         audio.pause();
-        toggleBtn.innerText = "🔇";
       }
     }
+    function setVolume(val) {
+      audio.volume = val;
+    }
 
-    // 音量調整
-    volumeSlider.addEventListener("input", function () {
-      audio.volume = this.value;
-    });
-
-    // 瀏覽器阻擋處理
-    document.addEventListener("click", () => {
-      if (audio.paused) {
-        audio.play().catch(e => console.log("音樂播放被瀏覽器阻擋"));
-      }
-    }, { once: true });
-
-    // 對話送出邏輯
     async function sendMessage() {
       const input = document.getElementById('input');
       const text = input.value.trim();
@@ -153,22 +149,17 @@
       messages.innerHTML += `<div class="message bot" id="loading">seasoul 正在回應你...</div>`;
       input.value = '';
 
-      try {
-        const res = await fetch('/api/chat', {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ message: text })
-        });
+      const res = await fetch('/api/chat', {
+        method: 'POST',
+        headers: { 'Content-Type': 'application/json' },
+        body: JSON.stringify({ message: text })
+      });
 
-        const data = await res.json();
-        document.getElementById('loading').remove();
-        messages.innerHTML += `<div class="message bot">seasoul：${data.reply}</div>`;
-      } catch (error) {
-        document.getElementById('loading').remove();
-        messages.innerHTML += `<div class="message bot">seasoul：出現一些問題，請稍後再試 🙏</div>`;
-      }
+      const data = await res.json();
+      document.getElementById('loading').remove();
+      messages.innerHTML += `<div class="message bot">seasoul：${data.reply}</div>`;
     }
   </script>
 
 </body>
-</html
+</html>
