--- a/index.html
+++ b/index.html
@@ -18,19 +18,21 @@
     header {
       display: flex;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: space-between;
+      max-width: 700px;
       padding: 20px;
+      margin: 0 auto;
     }
 
     #logo {
-      height: 50px;
+      height: 60px;
       width: auto;
     }
 
     .subtitle {
       text-align: center;
       font-size: 1.1rem;
-      margin-top: 5px;
+      margin-top: 10px;
       color: #666;
       line-height: 1.5;
     }
@@ -41,7 +43,7 @@
       flex-direction: column;
       justify-content: flex-end;
       align-items: center;
-      padding-bottom: 120px;
+      padding-bottom: 80px;
     }
 
     #chatbox {
@@ -49,7 +51,7 @@
       max-width: 700px;
       background: #ffffff;
       border-radius: 12px;
-      box-shadow: 0 0 16px rgba(0, 0, 0, 0.08);
+      box-shadow: 0 0 16px rgba(0, 0, 0, 0.1);
       padding: 30px;
       margin-top: 20px;
     }
@@ -82,49 +84,39 @@
       margin-top: 10px;
       border: none;
       border-radius: 4px;
-      background-color: #d6e8e0;
-      color: #333;
+      background-color: #4f6d5d;
+      color: white;
       cursor: pointer;
     }
 
     button:hover {
-      background-color: #c4ddd4;
+      background-color: #3f5f4c;
     }
 
+    /* 音樂控制浮動樣式 */
     #audio-controls {
       position: fixed;
       bottom: 20px;
       right: 20px;
       display: flex;
+      flex-direction: column;
       align-items: center;
       background: #ffffffcc;
-      padding: 10px 14px;
-      border-radius: 30px;
+      padding: 10px;
+      border-radius: 10px;
       box-shadow: 0 0 8px rgba(0,0,0,0.1);
-      gap: 10px;
     }
 
     #volume {
-      height: 100px;
-      writing-mode: bt-lr;
+      writing-mode: bt-lr; /* 垂直方向 */
       -webkit-appearance: slider-vertical;
-    }
-
-    #volume::-webkit-slider-thumb {
-      background: #4f6d5d;
-    }
-
-    .icon-btn {
-      font-size: 20px;
-      border: none;
-      background: none;
-      color: #4f6d5d;
-      cursor: pointer;
+      height: 100px;
+      margin-top: 10px;
     }
 
     @media (max-width: 600px) {
       #logo {
-        height: 40px;
+        height: 50px;
       }
     }
   </style>
@@ -147,13 +139,15 @@
     </div>
   </main>
 
+  <!-- 背景音樂播放器 -->
   <audio id="bgm" autoplay loop>
     <source src="seasoul_mixed_bgm.mp3" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 
+  <!-- 音樂控制區塊 -->
   <div id="audio-controls">
-    <button class="icon-btn" onclick="toggleMusic()">&#128264;</button>
+    <button onclick="toggleMusic()">🔊</button>
     <input type="range" id="volume" min="0" max="1" step="0.01" value="0.5" onchange="setVolume(this.value)">
   </div>
 
