--- a/index.html
+++ b/index.html
@@ -2,71 +2,75 @@
 <html lang="zh-Hant">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>靜映 Still Reflection</title>
   <style>
-    * {
+    body, html {
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
-    }
-    body, html {
       height: 100%;
-      font-family: 'Noto Serif TC', serif;
-      color: #f5f5f5;
+      font-family: "Noto Serif TC", serif;
+      color: #fdfdfd;
       overflow: hidden;
-      position: relative;
     }
 
-    /* 背景影片 */
-    #bg-video {
+    #background-video {
       position: fixed;
-      top: 0;
-      left: 0;
-      width: 100vw;
-      height: 100vh;
+      right: 0;
+      bottom: 0;
+      min-width: 100%;
+      min-height: 100%;
       object-fit: cover;
       z-index: -1;
     }
 
-    /* 左上角 LOGO */
-    .logo-container {
+    header {
       position: absolute;
       top: 20px;
       left: 20px;
-      width: 120px;
-    }
-    .logo-container img {
-      width: 100%;
-      height: auto;
-      display: block;
     }
 
-    /* 簡介文字 */
-    .intro-text {
+    #logo {
+      width: 300px;
+      height: auto;
+    }
+
+    .subtitle {
       text-align: center;
       margin-top: 100px;
+      font-size: 24px;
       line-height: 1.8;
-      font-size: 20px;
-      color: #f8f8f8;
+      font-weight: 300;
+      text-shadow: 0 0 4px #000;
     }
 
-    /* 對話框容器 */
     #chatbox {
-      position: absolute;
+      position: fixed;
       bottom: 40px;
       left: 50%;
       transform: translateX(-50%);
-      width: 100%;
+      width: 90%;
       max-width: 700px;
-      background-color: rgba(255, 255, 255, 0.05);
-      padding: 20px;
+      background: rgba(255, 255, 255, 0.15);
       border-radius: 12px;
-      backdrop-filter: blur(10px);
+      backdrop-filter: blur(12px);
+      padding: 20px;
+      box-shadow: 0 0 12px rgba(0,0,0,0.3);
     }
 
-    .message { margin-bottom: 10px; }
-    .user { color: #c0d8ef; font-weight: bold; }
-    .bot { color: #f4ecd6; font-style: italic; }
+    .message {
+      margin-bottom: 10px;
+    }
+
+    .user {
+      color: #f0f8ff;
+      font-weight: bold;
+    }
+
+    .bot {
+      color: #fff0f5;
+      font-style: italic;
+    }
 
     input[type="text"] {
       width: 70%;
@@ -74,129 +78,116 @@
       border: none;
       border-radius: 6px;
       margin-right: 10px;
+      font-size: 16px;
     }
 
     button {
       padding: 10px 18px;
-      background-color: rgba(255, 255, 255, 0.4);
+      font-size: 16px;
+      background: rgba(255,255,255,0.8);
       border: none;
       border-radius: 6px;
-      color: #333;
       cursor: pointer;
     }
 
-    /* 音樂控制器 */
-    #audio-controls {
+    #controls {
       position: fixed;
       bottom: 20px;
       right: 20px;
       display: flex;
       align-items: center;
       gap: 8px;
-      background-color: rgba(255, 255, 255, 0.15);
-      padding: 10px;
-      border-radius: 10px;
+      flex-direction: row;
     }
 
     #volume {
       writing-mode: bt-lr;
-      appearance: slider-vertical;
+      -webkit-appearance: slider-vertical;
       height: 80px;
     }
 
-    #volume, #toggle-music {
+    .icon {
+      width: 20px;
+      height: 20px;
+      filter: invert(85%);
       cursor: pointer;
     }
 
-    #toggle-music {
-      background: none;
-      border: none;
-      color: white;
-      font-size: 22px;
-    }
-
     @media (max-width: 600px) {
-      .intro-text {
-        font-size: 16px;
+      #logo {
+        width: 200px;
+      }
+
+      .subtitle {
+        font-size: 18px;
         margin-top: 80px;
-        padding: 0 20px;
-      }
-      #chatbox {
-        bottom: 20px;
-        width: 90%;
-      }
-      .logo-container {
-        width: 90px;
       }
     }
   </style>
 </head>
 <body>
-
   <!-- 背景影片 -->
-  <video id="bg-video" autoplay muted loop>
+  <video id="background-video" autoplay loop muted playsinline>
     <source src="233867_medium.mp4" type="video/mp4" />
-    Your browser does not support the video tag.
+    您的瀏覽器不支援影片播放。
   </video>
 
-  <!-- LOGO -->
-  <div class="logo-container">
-    <img src="still_reflection_logo.png" alt="靜映 Still Reflection Logo">
+  <!-- 左上角 LOGO -->
+  <header>
+    <img src="still_reflection_logo.png" id="logo" alt="Still Reflection Logo" />
+  </header>
+
+  <!-- 副標文字 -->
+  <div class="subtitle">
+    這是一場與自己的對話<br>
+    海般靜映，讓你照見內在深處的聲音與智慧
   </div>
 
-  <!-- 副標簡介 -->
-  <div class="intro-text">
-    <p>這是一場與自己的對話</p>
-    <p>海般靜映，讓你照見內在深處的聲音與智慧</p>
-  </div>
-
-  <!-- 對話區 -->
+  <!-- 對話框 -->
   <div id="chatbox">
     <div id="messages"></div>
     <input type="text" id="input" placeholder="留下你的心語…" />
     <button onclick="sendMessage()">送出</button>
   </div>
 
-  <!-- 背景音樂播放器 -->
-  <audio id="bgm" autoplay loop>
-    <source src="seasoul_mixed_bgm.mp3" type="audio/mpeg">
-    Your browser does not support the audio element.
-  </audio>
-
-  <!-- 音樂控制區 -->
-  <div id="audio-controls">
-    <button id="toggle-music">🔊</button>
-    <input type="range" id="volume" min="0" max="1" step="0.01" value="0.4">
+  <!-- 背景音樂控制 -->
+  <div id="controls">
+    <img id="toggle" class="icon" src="https://img.icons8.com/ios-filled/50/ffffff/speaker.png" alt="音量" onclick="toggleAudio()" />
+    <input type="range" id="volume" min="0" max="1" step="0.01" value="0.3" onchange="setVolume(this.value)">
   </div>
 
-  <!-- Chat JS -->
+  <!-- 背景音樂 -->
+  <audio id="bgm" autoplay loop>
+    <source src="seasoul_mixed_bgm.mp3" type="audio/mpeg" />
+    您的瀏覽器不支援音樂播放。
+  </audio>
+
   <script>
-    const audio = document.getElementById('bgm');
-    const toggleBtn = document.getElementById('toggle-music');
-    const volumeSlider = document.getElementById('volume');
+    const bgm = document.getElementById("bgm");
+    const toggleBtn = document.getElementById("toggle");
 
-    toggleBtn.addEventListener('click', () => {
-      if (audio.paused) {
-        audio.play();
-        toggleBtn.innerText = "🔊";
+    function toggleAudio() {
+      if (bgm.paused) {
+        bgm.play();
+        toggleBtn.src = "https://img.icons8.com/ios-filled/50/ffffff/speaker.png";
       } else {
-        audio.pause();
-        toggleBtn.innerText = "🔈";
+        bgm.pause();
+        toggleBtn.src = "https://img.icons8.com/ios-filled/50/ffffff/mute.png";
       }
-    });
+    }
 
-    volumeSlider.addEventListener('input', () => {
-      audio.volume = volumeSlider.value;
-    });
+    function setVolume(val) {
+      bgm.volume = val;
+    }
 
     async function sendMessage() {
-      const input = document.getElementById('input');
+      const input = document.getElementById("input");
       const text = input.value.trim();
       if (!text) return;
 
-      const messages = document.getElementById('messages');
-      messages.innerHTML += `<div class="message user">你：${text}</div>`;
-      messages.innerHTML += `<div class="message bot" id="loading">seasoul 正在傾聽你…</div>`;
+      const messages = document.getElementById("messages");
+      messages.innerHTML += '<div class="message user">你：' + text + '</div>';
+      messages.innerHTML += '<div class="message bot" id="loading">seasoul 正在傾聽你…</div>';
       input.value = '';
 
       const res = await fetch('/api/chat', {
@@ -206,10 +197,9 @@
       });
 
       const data = await res.json();
-      document.getElementById('loading').remove();
-      messages.innerHTML += `<div class="message bot">seasoul：${data.reply}</div>`;
+      document.getElementById("loading").remove();
+      messages.innerHTML += '<div class="message bot">seasoul：' + data.reply + '</div>';
     }
   </script>
-
 </body>
 </html>
